refactor : TicketTest, TicketsTest 수정